// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card card with isCompact applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-6"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  />
</DocumentFragment>
`;

exports[`Card renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  />
</DocumentFragment>
`;
